<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mibitelver2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tend"
        android:name="com.example.mibitelver2.ui.trending.TrendingFragment"
        android:label="@string/title_tend"
        tools:layout="@layout/fragment_trending" />

    <fragment
        android:id="@+id/navigation_bibli"
        android:name="com.example.mibitelver2.ui.library.LibraryFragment"
        android:label="@string/title_bibli"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_you"
        android:name="com.example.mibitelver2.ui.you.YouFragment"
        android:label="@string/title_you"
        tools:layout="@layout/fragment_you" />
</navigation>