<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="135dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/act_his_item_iv"
            android:layout_width="210dp"
            android:layout_height="115dp"
            android:layout_margin="10dp"
            android:src="@drawable/splash"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/act_his_item_title"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/act_his_item_iv"
            android:text="@string/videoTitleSample"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/anchor"
            android:layout_marginTop="10dp"
            android:layout_marginStart="-35dp"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/act_his_item_title"
            app:drawableStartCompat="@drawable/ic_baseline_more_vert_24" />

        <TextView
            android:id="@+id/act_his_item_channel"
            android:layout_toEndOf="@+id/act_his_item_iv"
            android:layout_below="@+id/act_his_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/channel_sample"/>

        <TextView
            android:id="@+id/act_his_item_view"
            android:layout_toEndOf="@+id/act_his_item_iv"
            android:layout_below="@+id/act_his_item_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/view_sample"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>